# mcp_daemon

./: .gitignore  Cargo.toml  FEATURES_AND_PLAN.md  LICENSE  README.md  book.toml  fundoc.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
certs/: localhost.example.crt  localhost.example.key
doc/: all.html  index.html  macro.bail.html  macro.bail_public.html  sidebar-items.js  struct.Error.html  struct.ErrorCode.html  struct.SessionError.html  type.Result.html  type.SessionResult.html
doc/client/: struct.Client.html  struct.ClientBuilder.html  trait.ClientHandler.html
doc/common/: index.html
doc/error/: index.html  sidebar-items.js
doc/error/compat/: index.html
doc/error/types/: fn.invalid_request.html  fn.prompt_not_found.html  fn.resource_not_found.html  index.html
doc/request/session/: index.html  struct.CancellationHook.html
doc/schema/: index.html  sidebar-items.js
doc/schema/annotations/: index.html  struct.ResourceAnnotations.html  struct.ResourceTemplateAnnotations.html
doc/schema/protocol/: index.html
doc/schema/schema/: enum.CallToolResultContentItem.html  enum.ClientNotification.html  enum.ClientRequest.html  enum.ClientResult.html  enum.CompleteRequestParamsRef.html  enum.CreateMessageRequestParamsIncludeContext.html  enum.CreateMessageResultContent.html  enum.EmbeddedResourceResource.html  enum.JsonrpcBatchRequestItem.html  enum.JsonrpcBatchResponseItem.html  enum.JsonrpcMessageSubtype2Item.html  enum.JsonrpcMessageSubtype5Item.html  enum.LoggingLevel.html  enum.ProgressToken.html  enum.PromptMessageContent.html  enum.ReadResourceResultContentsItem.html  enum.Role.html  enum.SamplingMessageContent.html  enum.ServerNotification.html  enum.ServerRequest.html  enum.ServerResult.html  index.html  sidebar-items.js  struct.Annotations.html  struct.AudioContent.html  struct.BlobResourceContents.html  struct.CallToolRequest.html  struct.CallToolRequestParams.html  struct.CallToolResult.html  struct.CancelledNotification.html  struct.CancelledNotificationParams.html  struct.ClientCapabilities.html  struct.ClientCapabilitiesRoots.html  struct.CompleteRequest.html  struct.CompleteRequestParams.html  struct.CompleteRequestParamsArgument.html  struct.CompleteResult.html  struct.CompleteResultCompletion.html  struct.CreateMessageRequest.html  struct.CreateMessageRequestParams.html  (+97 more)
doc/schema/schema_ext/: index.html
doc/schema/types_ex/: index.html  sidebar-items.js  struct.Base64Bytes.html  struct.Empty.html  struct.ProtocolVersion.html  struct.Tag.html  trait.TagData.html
doc/server/: fn.serve_stdio_with.html  index.html  sidebar-items.js  struct.RequestContext.html  struct.SessionData.html  trait.DefaultServer.html  trait.Server.html
doc/sse/: index.html  sidebar-items.js
doc/sse/http_server/: fn.http_server.html  fn.run_http_server.html  fn.sse_handler.html  index.html  sidebar-items.js  struct.Claims.html  struct.CorsConfig.html  struct.MessageQuery.html  struct.ServerConfig.html  struct.SessionState.html  struct.TlsConfig.html
doc/sse/middleware/: index.html  sidebar-items.js  struct.AuthConfig.html  struct.Claims.html  struct.JwtAuth.html  struct.JwtAuthMiddleware.html
doc/transport/: enum.ClientHttpTransport.html  enum.ClientTlsConfig.html  enum.JsonRpcMessage.html  enum.ServerHttpTransport.html  enum.TlsConfig.html  enum.TransportError.html  enum.TransportErrorCode.html  fn.handle_ws_connection.html  fn.start_http2_server.html  index.html  sidebar-items.js  struct.ClientHttp2Transport.html  struct.ClientInMemoryTransport.html  struct.ClientWsTransport.html  struct.ClientWsTransportBuilder.html  struct.CorsConfig.html  struct.Http2Builder.html  struct.Http2Config.html  struct.Http2ServerConfig.html  struct.JsonRpcError.html  struct.JsonRpcNotification.html  struct.JsonRpcRequest.html  struct.JsonRpcResponse.html  struct.JsonRpcVersion.html  struct.ServerHandle.html  struct.ServerHttp2Transport.html  struct.ServerInMemoryTransport.html  struct.ServerSseTransport.html  struct.ServerWsTransport.html  struct.StdioTransport.html  trait.Transport.html  type.Message.html  type.RequestId.html  type.Result.html
doc/transport/error/: enum.TransportError.html  enum.TransportErrorCode.html
doc/transport/http/: enum.ClientHttpTransport.html  enum.ServerHttpTransport.html  struct.Http2Builder.html  struct.Http2Config.html
doc/transport/http2/: enum.ClientTlsConfig.html  enum.TlsConfig.html  fn.start_http2_server.html  (+5 more)
examples/: cors_test.html  http2_client_tls_example.rs  http2_cors_example.rs  websocket_test.rs
mcp_daemon/: all.html  index.html  macro.bail.html  macro.bail_public!.html  macro.bail_public.html  sidebar-items.js  struct.Error.html  struct.ErrorCode.html  struct.SessionError.html  type.Result.html  type.SessionResult.html
mcp_daemon/client/: index.html  sidebar-items.js  struct.Client.html  struct.ClientBuilder.html  trait.ClientHandler.html
mcp_daemon/request/: index.html
mcp_daemon/schema/: index.html  sidebar-items.js
mcp_daemon/server/: fn.serve_stdio.html  fn.serve_stdio_with.html  struct.RequestContext.html  struct.SessionData.html  trait.DefaultServer.html  trait.Server.html
mcp_daemon/utility/: index.html
mcp_daemon/utils/: index.html
scripts/: generate_cert.sh
src/: client.rs  common.rs  lib.rs  main.rs  server.rs  utils.rs
src/cli/: config.rs  mod.rs  tui.rs
src/error/: mod.rs  types.rs
src/request/: mod.rs  session.rs
src/schema/: annotations.rs  default_impls.rs  mod.rs  protocol.rs  schema.rs  schema_ext.rs  types_ex.rs
src/sse/: http_server.rs
src/transport/: auth.rs  error.rs  http.rs  http2.rs  http2_tls.rs  httpd.rs  mod.rs  sse.rs  stdio.rs  traits.rs  websockets.rs
src/utility/: macros.rs  mod.rs
tests/: client_builder_test.rs  client_handler_test.rs  client_impl_test.rs  client_json_rpc_handler_test.rs  client_test.rs  lib_test.rs  server_test.rs  transport_test.rs  types_ex_test.rs
(+385 files in other folders)
