[package]
name = "mcp_daemon"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/entrepeneur4lyf/mcp_daemon"
license = "MIT"
authors = ["Shawn McAllister - https://github.com/entrepeneur4lyf"]
homepage = "https://github.com/entrepeneur4lyf/mcp_daemon"
keywords = ["async", "mcp", "protocol", "daemon", "extended"]
categories = ["asynchronous", "development-tools", "web-programming::http-client", "web-programming::http-server", "web-programming::websocket"]
readme = "README.md"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.81"
base64 = "0.22.1"
derive-ex = "0.1.8"
jsoncall = "0.0.3"  # Latest available version is 0.0.3
parse-display = "0.10.0"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"

# Actix ecosystem
actix-web = { version = "4.5.1", features = ["macros"] }
actix-ws = "0.3.0"  # Latest stable version as of 2024-07-21
actix-web-lab = "0.2.0"

# Crypto/TLS
ring = "0.17.8"
rustls = "0.22.3"  # Removed invalid feature flag
tokio-rustls = "0.25.0"

# TUI
ratatui = "0.26.0"
crossterm = "0.28.0"

# HTTP/2
hyper = { version = "1.2.0", features = ["http2"] }
http-body-util = "0.1.3"
