[package]
name = "mcp_daemon"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/entrepeneur4lyf/mcp_daemon"
license = "MIT"
authors = ["Shawn McAllister - https://github.com/entrepeneur4lyf"]
homepage = "https://github.com/entrepeneur4lyf/mcp_daemon"
keywords = ["async", "mcp", "protocol", "daemon", "extended"]
categories = ["asynchronous", "development-tools", "web-programming::http-client", "web-programming::http-server", "web-programming::websocket"]
readme = "README.md"

[lib]
doctest = false

[features]
default = ["sse"]
sse = ["dep:actix-web-lab"]
acme = ["dep:rustls-acme"]

[dependencies]
anyhow = "^1.0"
thiserror = "^2.0"
async-trait = "^0.1.81"
base64 = "^0.22.1"
derive-ex = "^0.1.8"
jsoncall = "^0.0.3"
parse-display = "^0.10.0"
schemars = "^0.8.22"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
tokio = { version = "^1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "^0.1.16"
tokio-tungstenite = { version = "^0.26", features = ["native-tls"] }
reqwest = { version = "^0.12", features = ["stream", "json"] }
jsonwebtoken = "^8.3"
tracing = "^0.1.41"
bytestring = "^1.3"
url = "^2.5.4"
uuid = { version = "^1.16", features = ["v4"] }

# Actix ecosystem
actix-web = { version = "^4.10.2", features = ["macros"] }
actix-ws = "^0.3.0"
actix-web-lab = { version = "^0.24", optional = true }
actix-cors = "^0.7"

# Crypto/TLS
ring = "^0.17.14"
rustls = "0.22.3"
tokio-rustls = "^0.26"
rustls-pemfile = "^2.2"
bytes = "^1.6.0"
futures = "^0.3.30"
futures-util = "^0.3.30"

# TUI and CLI
ratatui = { version= "^0.30.0-alpha.2", features = ["crossterm", "all-widgets", "palette", "macros"] }
crossterm = "^0.29"
clap = { version = "^4.5", features = ["derive"] }
tui-input = "^0.12"
tui-logger = { version = "^0.17", features = ["crossterm", "tracing", "tracing-subscriber", "tracing-support", "formatter"] }
directories = "^6.0"
sysinfo = "^0.35"
chrono = "^0.4"
dashmap = "^6.1"
palette = "^0.7.6"
tuirealm = "2.1.0"
tui-realm-stdlib = "2.0.1"
throbber-widgets-tui = "^0.8.0"
ratatui-splash-screen = "^0.1.4"
tui-scrollview = "0.5.1"
env_logger = "0.11.8"
daemonize-me = "2.0.2"
# HTTP/2
hyper = { version = "1.6.0", features = ["http2", "client", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1.3"
rustls-acme = { version = "0.13.0", features = ["tokio"], optional = true }
http = "1.3.1"
hyper-rustls = { version = "0.27.5", features = ["http2", "webpki-roots"] }
rustls-native-certs = "0.8.1"

[dev-dependencies]
